<resources>
    <string name="app_name">Sanal Dolabım</string>
    <string name="sanal">Sanal</string>
    <string name="dolabim">Dolabım</string>
    <string name="drawers">Çekmecelerim</string>
    <string name="changing_room">Kabin Odası</string>
    <string name="events">Etkinliklerim</string>
    <string name="app_text">Sanal Dolabım</string>
    <string name="outfits">Kombinlerim</string>
    <string name="no_drawer">Hiç çekmece yok</string>
    <string name="clothes">Kıyafetlerim</string>
    <string name="no_clothes">Bu çekmecede hiç kıyafet yok</string>
    <string name="no_type">Her bölüm için kıyafet bulunmalıdır.</string>
    <string name="no_outfit">Hiç kombin bulunmuyor</string>
    <string name="no_event">Hiç etkinlik yok</string>
    <string name="drawer_name">Çekmece Adı</string>
    <string name="cancel">İptal</string>
    <string name="color">Renk</string>
    <string name="select_color">Renk seçiniz</string>
    <string name="select_date">Alınma tarihini seçiniz</string>
    <string name="enter_price">Fiyatını giriniz</string>
    <string name="create_outfit">Kombin Oluştur</string>
    <string name="confirm_location">Bu konumu seçmek istiyor musunuz?</string>
    <string name="pick_new">Yeni Konum Seç</string>
    <string name="approve">Onayla</string>
    <string name="event_name">Etkinlik ismini giriniz</string>
    <string name="clothes_color">Kıyafet Rengi</string>
    <string name="update">Güncelle</string>
    <string name="event_type">Etkinlik türünü giriniz</string>
    <string name="event_date">Etkinlik tarihini seçiniz</string>
    <string name="event_location">Etkinlik lokasyonunu seçiniz</string>
    <string name="event_outfit">Etkinlik kombinini seçiniz</string>
    <string name="add">Ekle</string>
    <string name="add_clothes">Kıyafet Ekle</string>
    <string name="my_name">Berkay Yapıcı - 17011003</string>
    <string name="outfit_room">K\na\nb\ni\nn\n \nO\nd\na\ns\nı</string>
    <string name="add_event">Etkinlik Ekle</string>
    <string-array name="type">
        <item>Kıyafet türü seçiniz</item>
        <item>Şapka</item>
        <item>T-Shirt</item>
        <item>Gömlek</item>
        <item>Kazak</item>
        <item>Sweatshirt</item>
        <item>Mont</item>
        <item>Pantolon</item>
        <item>Şort</item>
        <item>Eşofman</item>
        <item>Ayakkabı</item>
    </string-array>
    <string-array name="pattern">
        <item>Kıyafet deseni seçiniz</item>
        <item>Düz</item>
        <item>Çizgili</item>
        <item>Kareli</item>
        <item>Baskılı</item>
        <item>Puantiyeli</item>
    </string-array>
</resources>