<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_location"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end">

        <Button
            style="@style/TextAppearance.AppCompat.Button"
            android:id="@+id/pickNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:text="@string/pick_new" />

        <Button
            style="@style/TextAppearance.AppCompat.Button"
            android:id="@+id/acceptLocation"
            android:layout_width="100dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/approve" />

    </LinearLayout>
</LinearLayout>