<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <EditText
        android:id="@+id/dialogName"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/drawer_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/dialogAdd"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/add"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dialogDismiss"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>