<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/deleteClothes"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:background="@color/white"
            android:contentDescription="@string/clothes"
            android:scaleType="fitXY"
            android:src="@drawable/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/editClothes"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="3dp"
            android:background="@color/white"
            android:contentDescription="@string/clothes"
            android:scaleType="fitXY"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/rvPhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_text"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rvPhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rvColor"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/color"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rvPhoto"
            app:layout_constraintTop_toBottomOf="@+id/rvType" />

        <TextView
            android:id="@+id/rvPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rvPhoto"
            app:layout_constraintTop_toBottomOf="@+id/rvColor" />

        <TextView
            android:id="@+id/rvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rvPhoto"
            app:layout_constraintTop_toBottomOf="@+id/rvPattern" />

        <TextView
            android:id="@+id/rvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rvPhoto"
            app:layout_constraintTop_toBottomOf="@+id/rvDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>